# heat_conduction

./: CMakeLists.txt  LICENSE  main.cpp
include/: Solver.h  StructedMesh.h  config.h  constants.h  kernels.cuh  pch.h  types.h
src/: Solver.cpp  StructedMesh.cpp  kernels.cu
